[package]
name = "tetrust"
version = "0.1.0"
authors = ["Michael Auderer <michael@stackmind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc0"
glam = { version = "0.8.6", features = ["mint"] }
rand = "0.8.3"